fix navigation, fix front page grid spacing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,7 +23,7 @@ a:hover {
   align-items: center;
 
 
-  grid-gap: 10px;
+  
   max-width: 100%;
   max-height: 100%;
   
@@ -57,22 +57,24 @@ img {
 }
 
 figcaption {
-    padding: 10px;
+    
     text-align: center;
     position: relative;
-    height: 20px;
-    top: -250px;
+    height: 1px;
+    top: -100px;
     color: white;
-    background-color: rgba (0, 0, 0, .4);
+    
     opacity: 0;
-    font-size: 2.8rem;
+    font-size: 2.5rem;
     max-width: 100%;
     font-weight: bold;
-    border-radius: 10%;
+   
+    text-shadow: 2px 2px black;
 }
  
 .box:hover figcaption {
     opacity: 1;
+    
     
 }
 
@@ -81,7 +83,7 @@ figure {
 }
 
 figure:hover {
-    opacity: 0.7;
+    opacity: 0.9;
 }
 
 .box {
